footer from geeksforgeeks
https://www.geeksforgeeks.org/how-to-create-a-simple-footer-using-bootstrap-5/

--- a/index.html
+++ b/index.html
@@ -34,7 +34,48 @@
 		<div class="row"></div>
 	</main>
 
-
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<h2>Snabbkaffe AB</h2>
+				</div>
+				<div class="col-md-3">
+					<h5>Contact Webmaster</h5>
+					<ul class="list-unstyled">
+						<li>Name: Viktor L</li>
+						<li>Email: dont@mail.me</li>
+						<li>Phone: 112</li>
+					</ul>
+				</div>
+			</div>
+			<hr>
+			<div class="row">
+				<div class="col-md-6">
+					<p>&copy; 2024. All rights reserved.</p>
+				</div>
+				<div class="col-md-6 text-end">
+					<ul class="list-inline footer-links">
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Privacy Policy
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Terms of Service
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Sitemap
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
