borrow settings to the footer and wrap main in container correctly

--- a/index.html
+++ b/index.html
@@ -30,18 +30,99 @@
 		</nav>
 	</header>
 
-	<main class="container">
-		<div class="row"></div>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-lg-4">
+					<div class="card" style="width: 18rem;">
+						<img src="assets/office.jpg" class="card-img-top" alt="Kontorsmiljö">
+						<div class="card-body">
+							<h5 class="card-title">Vilka är vi?</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+								laudantium
+								cupiditate laboriosam impedit ipsum explicabo. Quisquam iste eos tenetur atque excepturi
+								ut
+								hic
+								architecto perferendis tempore. Asperiores excepturi perspiciatis nobis.</p>
+						</div>
+						<div class="card-body">
+							<a href="#" class="card-link">Om Oss</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-lg-4">
+					<div class="card" style="width: 18rem;">
+						<img src="assets/machine.webp" class="card-img-top" alt="Kaffemaskiner">
+						<div class="card-body">
+							<h5 class="card-title">Vad gör vi?</h5>
+							<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+								assumenda
+								minima illo minus atque, iusto, sapiente non veniam recusandae sed iste ea tempore
+								voluptatum!
+								Mollitia labore voluptates laudantium eos quaerat?</p>
+						</div>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">Kaﬀeparty </li>
+							<li class="list-group-item">Kaffemaskiner</li>
+						</ul>
+						<div class="card-body">
+							<a href="#" class="card-link">Produkter</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-lg-4">
+					<div class="card" style="width: 18rem;">
+						<img src="assets/sales.jpg" class="card-img-top" alt="Handskakning">
+						<div class="card-body">
+							<h5 class="card-title">Varför oss?</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quia
+								autem
+								itaque
+								vitae dolorem? Dolorem quaerat illo aliquid ad similique inventore sequi obcaecati omnis
+								in.
+								Perferendis numquam ducimus possimus? Vel!</p>
+						</div>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">Snabba</li>
+							<li class="list-group-item">Kvalite</li>
+						</ul>
+						<div class="card-body">
+							<a href="#" class="card-link">Om oss</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-lg-4">
+					<div class="card" style="width: 18rem;">
+						<img src="assets/party.jpg" class="card-img-top" alt="Kaffeparty">
+						<div class="card-body">
+							<h5 class="card-title">Kaﬀeparty, så fungerar det!</h5>
+							<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
+								asperiores
+								ducimus. Incidunt alias doloremque officia tenetur a assumenda accusamus ea deserunt
+								maiores!
+								Optio temporibus corrupti nesciunt dolorem qui. Consequatur, consequuntur!</p>
+						</div>
+						<div class="card-body">
+							<a href="#" class="card-link">Kaffeparty</a>
+							<a href="#" class="card-link">Alla Produkter</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 
-	<footer class="footer">
+	<footer class="footer bg-light py-3 mt-4">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
-					<h2>Snabbkaffe AB</h2>
+					<h2 class="h5">Snabbkaffe AB</h2>
 				</div>
 				<div class="col-md-3">
-					<h5>Contact Webmaster</h5>
+					<h5 class="h5">Contact Webmaster</h5>
 					<ul class="list-unstyled">
 						<li>Name: Viktor L</li>
 						<li>Email: dont@mail.me</li>
