make cards responsive the way intended

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
 	<title>Snabbkaffe AB</title>
 </head>
 
@@ -33,7 +34,7 @@
 	<main>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
 					<div class="card" style="width: 18rem;">
 						<img src="assets/office.jpg" class="card-img-top" alt="Kontorsmiljö">
 						<div class="card-body">
@@ -51,7 +52,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
 					<div class="card" style="width: 18rem;">
 						<img src="assets/machine.webp" class="card-img-top" alt="Kaffemaskiner">
 						<div class="card-body">
@@ -72,7 +73,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
 					<div class="card" style="width: 18rem;">
 						<img src="assets/sales.jpg" class="card-img-top" alt="Handskakning">
 						<div class="card-body">
@@ -94,7 +95,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
 					<div class="card" style="width: 18rem;">
 						<img src="assets/party.jpg" class="card-img-top" alt="Kaffeparty">
 						<div class="card-body">
