do margin and padding in bootstrap instead

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">Snabbkaffe AB</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -35,7 +35,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-					<div class="card" style="width: 18rem;">
+					<div class="card mt-4" style="width: 18rem;">
 						<img src="assets/office.jpg" class="card-img-top" alt="Kontorsmiljö">
 						<div class="card-body">
 							<h5 class="card-title">Vilka är vi?</h5>
@@ -53,7 +53,7 @@
 				</div>
 
 				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-					<div class="card" style="width: 18rem;">
+					<div class="card mt-4" style="width: 18rem;">
 						<img src="assets/machine.webp" class="card-img-top" alt="Kaffemaskiner">
 						<div class="card-body">
 							<h5 class="card-title">Vad gör vi?</h5>
@@ -74,7 +74,7 @@
 				</div>
 
 				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-					<div class="card" style="width: 18rem;">
+					<div class="card mt-4" style="width: 18rem;">
 						<img src="assets/sales.jpg" class="card-img-top" alt="Handskakning">
 						<div class="card-body">
 							<h5 class="card-title">Varför oss?</h5>
@@ -96,7 +96,7 @@
 				</div>
 
 				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-					<div class="card" style="width: 18rem;">
+					<div class="card mt-4" style="width: 18rem;">
 						<img src="assets/party.jpg" class="card-img-top" alt="Kaffeparty">
 						<div class="card-body">
 							<h5 class="card-title">Kaﬀeparty, så fungerar det!</h5>
