--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,7 +47,7 @@
 								architecto perferendis tempore. Asperiores excepturi perspiciatis nobis.</p>
 						</div>
 						<div class="card-body">
-							<a href="#" class="card-link">Om Oss</a>
+							<a href="about.html" class="card-link">Om Oss</a>
 						</div>
 					</div>
 				</div>
@@ -68,7 +68,7 @@
 							<li class="list-group-item">Kaffemaskiner</li>
 						</ul>
 						<div class="card-body">
-							<a href="#" class="card-link">Produkter</a>
+							<a href="products.html" class="card-link">Produkter</a>
 						</div>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 							<li class="list-group-item">Kvalite</li>
 						</ul>
 						<div class="card-body">
-							<a href="#" class="card-link">Om oss</a>
+							<a href="about.html" class="card-link">Om Oss</a>
 						</div>
 					</div>
 				</div>
@@ -107,8 +107,8 @@
 								Optio temporibus corrupti nesciunt dolorem qui. Consequatur, consequuntur!</p>
 						</div>
 						<div class="card-body">
-							<a href="#" class="card-link">Kaffeparty</a>
-							<a href="#" class="card-link">Alla Produkter</a>
+							<a href="products.html" class="card-link">Kaffeparty</a>
+							<a href="products.html" class="card-link">Produkter</a>
 						</div>
 					</div>
 				</div>
