--- a/about.html
+++ b/about.html
@@ -3,11 +3,88 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
+	<title>Snabbkaffe AB</title>
 </head>
 
 <body>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">Snabbkaffe AB</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<a class="nav-link active" aria-current="page" href="index.html">Hem</a>
+						<a class="nav-link" href="products.html">Produkter</a>
+						<a class="nav-link" href="about.html">Om Oss</a>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+
+				</div>
+			</div>
+	</main>
+
+	<footer class="footer bg-light py-3 mt-4">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<h2 class="h5">Snabbkaffe AB</h2>
+				</div>
+				<div class="col-md-3">
+					<h5 class="h5">Contact Webmaster</h5>
+					<ul class="list-unstyled">
+						<li>Name: Viktor L</li>
+						<li>Email: dont@mail.me</li>
+						<li>Phone: 112</li>
+					</ul>
+				</div>
+			</div>
+			<hr>
+			<div class="row">
+				<div class="col-md-6">
+					<p>&copy; 2024. All rights reserved.</p>
+				</div>
+				<div class="col-md-6 text-end">
+					<ul class="list-inline footer-links">
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Privacy Policy
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Terms of Service
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a href="#" class="text-white">
+								Sitemap
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+
+
 
 </body>
 
