fix current on nav

--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="index.html">Hem</a>
+						<a class="nav-link" href="index.html">Hem</a>
 						<a class="nav-link" href="products.html">Produkter</a>
-						<a class="nav-link" href="about.html">Om Oss</a>
+						<a class="nav-link active" aria-current="page" href="about.html">Om Oss</a>
 					</div>
 				</div>
 			</div>
