--- a/about.html
+++ b/about.html
@@ -33,9 +33,44 @@
 
 	<main>
 		<div class="container">
-			<div class="row">
+			<div class="row mt-3">
 				<div class="col">
+					<h2>Om Snabbkaffe AB</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolores cumque, nihil eum,
+						labore enim facilis optio maiores a ipsam obcaecati quasi aliquid quaerat accusantium est quidem
+						officia recusandae tempore!</p>
+				</div>
+			</div>
 
+			<div class="card mb-3" style="max-width: 540px;">
+				<div class="row g-0">
+					<div class="col-md-4">
+						<img src="assets/ceo.jpg" class="img-fluid rounded-start" alt="CEO">
+					</div>
+					<div class="col-md-8">
+						<div class="card-body">
+							<h5 class="card-title">VD</h5>
+							<p class="card-text">Namn: Ved Vedesson</p>
+							<p class="card-text">Telefon: 070 - 123 45 67</p>
+							<p class="card-text">E-post: ved.vedesson@snabbkaffe.se</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="card mb-3" style="max-width: 540px;">
+				<div class="row g-0">
+					<div class="col-md-8">
+						<div class="card-body">
+							<h5 class="card-title">HR</h5>
+							<p class="card-text">Namn: Human Resourcesson</p>
+							<p class="card-text">Telefon: 070 - 987 76 54</p>
+							<p class="card-text">E-post: human.resourcesson@snabbkaffe.se</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<img src="assets/hr.jpg" class="img-fluid rounded-start" alt="HR">
+					</div>
 				</div>
 			</div>
 	</main>
