add ceo hr assets and make responsive

--- a/about.html
+++ b/about.html
@@ -42,34 +42,38 @@
 				</div>
 			</div>
 
-			<div class="card mb-3" style="max-width: 540px;">
-				<div class="row g-0">
-					<div class="col-md-4">
-						<img src="assets/ceo.jpg" class="img-fluid rounded-start" alt="CEO">
-					</div>
-					<div class="col-md-8">
-						<div class="card-body">
-							<h5 class="card-title">VD</h5>
-							<p class="card-text">Namn: Ved Vedesson</p>
-							<p class="card-text">Telefon: 070 - 123 45 67</p>
-							<p class="card-text">E-post: ved.vedesson@snabbkaffe.se</p>
+			<div class="col-lg-6 col-xl-6">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="assets/ceo.webp" class="img-fluid rounded-start" alt="CEO">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">VD</h5>
+								<p class="card-text">Namn: Ved Vedesson</p>
+								<p class="card-text">Telefon: 070 - 123 45 67</p>
+								<p class="card-text">E-post: ved.vedesson@snabbkaffe.se</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="card mb-3" style="max-width: 540px;">
-				<div class="row g-0">
-					<div class="col-md-8">
-						<div class="card-body">
-							<h5 class="card-title">HR</h5>
-							<p class="card-text">Namn: Human Resourcesson</p>
-							<p class="card-text">Telefon: 070 - 987 76 54</p>
-							<p class="card-text">E-post: human.resourcesson@snabbkaffe.se</p>
+			<div class="col-lg-6 col-xl-6">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">HR</h5>
+								<p class="card-text">Namn: Human Resourcesson</p>
+								<p class="card-text">Telefon: 070 - 987 76 54</p>
+								<p class="card-text">E-post: human.resourcesson@snabbkaffe.se</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-md-4">
-						<img src="assets/hr.jpg" class="img-fluid rounded-start" alt="HR">
+						<div class="col-md-4">
+							<img src="assets/hr.webp" class="img-fluid rounded-start" alt="HR">
+						</div>
 					</div>
 				</div>
 			</div>
