add some machines

--- a/products.html
+++ b/products.html
@@ -33,8 +33,64 @@
 
 	<main>
 		<div class="container">
+			<div class="row mt-3">
+				<div class="col">
+					<h2>Produkter</h2>
+				</div>
+			</div>
 
-
+			<div class="row mt-3">
+				<div class="col-md-6 col-lg-8 col-xl-10">
+					<h3>Kaﬀemaskiner</h3>
+					<div class="row">
+						<div class="col-md-4 col-lg-6">
+							<div class="card">
+								<img src="assets/coffee-machine (1).webp" class="card-img-top" alt="Pro 3000">
+								<div class="card-body">
+									<h5 class="card-title">Pro 3000</h5>
+									<p class="card-text">Pris: 50 000 kr</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-6">
+							<div class="card">
+								<img src="assets/coffee-machine (2).webp" class="card-img-top" alt="Sage 8">
+								<div class="card-body">
+									<h5 class="card-title">Sage 8</h5>
+									<p class="card-text">Pris: 5 000 kr</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-6">
+							<div class="card">
+								<img src="assets/coffee-machine (3).webp" class="card-img-top" alt="Delongi 23">
+								<div class="card-body">
+									<h5 class="card-title">Delongi 23</h5>
+									<p class="card-text">Pris: 12 000 kr</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-6">
+							<div class="card">
+								<img src="assets/coffee-machine (4).webp" class="card-img-top" alt="Breville 4000">
+								<div class="card-body">
+									<h5 class="card-title">Breville 4000</h5>
+									<p class="card-text">Pris: 14 500 kr</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-6">
+							<div class="card">
+								<img src="assets/coffee-machine (5).webp" class="card-img-top" alt="Magia 900">
+								<div class="card-body">
+									<h5 class="card-title">Magia 900</h5>
+									<p class="card-text">Pris: 9 000 kr</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 
