add coffee partys

--- a/products.html
+++ b/products.html
@@ -43,48 +43,94 @@
 				<div class="col-md-6 col-lg-8 col-xl-10">
 					<h3>Kaﬀemaskiner</h3>
 					<div class="row">
-						<div class="col-md-4 col-lg-6">
+						<div class="col-md-4 col-lg-6 py-3">
 							<div class="card">
-								<img src="assets/coffee-machine (1).webp" class="card-img-top" alt="Pro 3000">
+								<img src="assets/coffee-machine (1).webp" class="card-img-top" alt="Pro 3000"
+									style="height: 200px;">
 								<div class="card-body">
 									<h5 class="card-title">Pro 3000</h5>
 									<p class="card-text">Pris: 50 000 kr</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-lg-6">
+						<div class="col-md-4 col-lg-6 py-3">
 							<div class="card">
-								<img src="assets/coffee-machine (2).webp" class="card-img-top" alt="Sage 8">
+								<img src="assets/coffee-machine (2).webp" class="card-img-top" alt="Sage 8"
+									style="height: 200px;">
 								<div class="card-body">
 									<h5 class="card-title">Sage 8</h5>
 									<p class="card-text">Pris: 5 000 kr</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-lg-6">
+						<div class="col-md-4 col-lg-6 py-3">
 							<div class="card">
-								<img src="assets/coffee-machine (3).webp" class="card-img-top" alt="Delongi 23">
+								<img src="assets/coffee-machine (3).webp" class="card-img-top" alt="Delongi 23"
+									style="height: 200px;">
 								<div class="card-body">
 									<h5 class="card-title">Delongi 23</h5>
 									<p class="card-text">Pris: 12 000 kr</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-lg-6">
+						<div class="col-md-4 col-lg-6 py-3">
 							<div class="card">
-								<img src="assets/coffee-machine (4).webp" class="card-img-top" alt="Breville 4000">
+								<img src="assets/coffee-machine (4).webp" class="card-img-top" alt="Breville 4000"
+									style="height: 200px;">
 								<div class="card-body">
 									<h5 class="card-title">Breville 4000</h5>
 									<p class="card-text">Pris: 14 500 kr</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-lg-6">
+						<div class="col-md-4 col-lg-6 py-3">
 							<div class="card">
-								<img src="assets/coffee-machine (5).webp" class="card-img-top" alt="Magia 900">
+								<img src="assets/coffee-machine (5).webp" class="card-img-top" alt="Magia 900"
+									style="height: 200px;">
 								<div class="card-body">
 									<h5 class="card-title">Magia 900</h5>
 									<p class="card-text">Pris: 9 000 kr</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row mt-3">
+				<div class="row">
+					<div class="col-md-4 col-lg-6">
+						<h3>Kaﬀeparty</h3>
+						<div class="row">
+							<div class="col">
+								<div class="card mb-3">
+									<img src="assets/coffee-party-home.jpg" class="card-img-top"
+										alt="Kaﬀeparty Privatpersoner">
+									<div class="card-body">
+										<h5 class="card-title">Kaﬀeparty 1</h5>
+										<p class="card-text">Beskrivning: Bra för dop och studenten.</p>
+										<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+											Eligendi earum odit dignissimos obcaecati provident soluta aspernatur
+											assumenda totam eum illo, in ex sed pariatur voluptatem eius molestias
+											impedit? Quibusdam, sed?</p>
+										<p class="card-text">Fast pris: 20 000 kr</p>
+									</div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="card mb-3">
+									<img src="assets/coffee-party-office.webp" class="card-img-top"
+										alt="Kaﬀeparty Företag">
+									<div class="card-body">
+										<h5 class="card-title">Kaﬀeparty Företag</h5>
+										<p class="card-text">Beskrivning: Idealisk för företagsevenemang. Fullt
+											avdragsgillt.</p>
+										<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+											Tempora accusamus ducimus iste quia? Repudiandae earum facilis ipsa vitae
+											maiores quod nisi nostrum quaerat! Vel praesentium quas, quibusdam in ipsa
+											ducimus.</p>
+										<p class="card-text">Pris: Ring för offert.</p>
+									</div>
 								</div>
 							</div>
 						</div>
